12-kubernetes-05-cni/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: app-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: k8s.gcr.io/echoserver:1.4
