12-kubernetes-05-cni/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-world-policy
  namespace: app-namespace
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
  - Ingress
